[gd_scene load_steps=11 format=3 uid="uid://vrke8yyjwte5"]

[ext_resource type="Texture2D" uid="uid://bhq0spg5enkg3" path="res://Sprites/environments/hub-zoo.png" id="1_mmega"]
[ext_resource type="FontFile" uid="uid://vlkshjxq24pw" path="res://fonts/Coffe Break.otf" id="1_pmxgl"]
[ext_resource type="Texture2D" uid="uid://c6yctw8fjtuag" path="res://Sprites/menus/menu_button_hover.png" id="2_7aunm"]
[ext_resource type="Texture2D" uid="uid://t1gwjckj78xw" path="res://Sprites/menus/menu_button.png" id="3_lb7sl"]
[ext_resource type="Script" path="res://Scripts/menus/main_menu.gd" id="4_bug83"]
[ext_resource type="AudioStream" uid="uid://dhrmqx60gym46" path="res://musics/Music_Hub-Loop.ogg" id="5_relw5"]
[ext_resource type="AudioStream" uid="uid://kskn8n0rxxnb" path="res://sfxs/SFX_Click.wav" id="6_wpu3y"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uxfbl"]
texture = ExtResource("1_mmega")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dku11"]
texture = ExtResource("2_7aunm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tv4tj"]
texture = ExtResource("3_lb7sl")

[node name="MainMenu" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_uxfbl")

[node name="Panel" type="Panel" parent="CanvasLayer/Panel"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer/Panel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.976471, 0.309804, 1)
theme_override_fonts/font = ExtResource("1_pmxgl")
theme_override_font_sizes/font_size = 108
text = "La Grande Ã‰vasion du Zoo"

[node name="Margin" type="Control" parent="CanvasLayer/Panel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CanvasLayer/Panel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_pmxgl")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxTexture_dku11")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_dku11")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dku11")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_dku11")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_dku11")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_dku11")
theme_override_styles/hover = SubResource("StyleBoxTexture_dku11")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_dku11")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dku11")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_tv4tj")
theme_override_styles/normal = SubResource("StyleBoxTexture_tv4tj")
text = "Jouer"

[node name="Margin2" type="Control" parent="CanvasLayer/Panel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="QuitButton" type="Button" parent="CanvasLayer/Panel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_pmxgl")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxTexture_dku11")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_dku11")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dku11")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_dku11")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_dku11")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_dku11")
theme_override_styles/hover = SubResource("StyleBoxTexture_dku11")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_dku11")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dku11")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_tv4tj")
theme_override_styles/normal = SubResource("StyleBoxTexture_tv4tj")
text = "Quitter"

[node name="MainMenuManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_bug83")

[node name="ButtonPressedSound" type="AudioStreamPlayer" parent="MainMenuManager"]
unique_name_in_owner = true
stream = ExtResource("6_wpu3y")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_relw5")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="CanvasLayer/Panel/Panel/VBoxContainer/PlayButton" to="MainMenuManager" method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Panel/VBoxContainer/QuitButton" to="MainMenuManager" method="_on_quit_button_pressed"]
